syntax-analyzer/tests/test_errors1.c
int main() {
    int int a;          // error
    int b = 8;          // error
    list float product;
    writeln("This is a string\n");
    // This is a comment
}